<resources>
    <string name="app_name">LMS</string>
    <string name="imageLogo">Incwell</string>
    <string name="inc">Incwell Venture</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="txt_login">Login</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="title_activity_dashboard">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="users">Users</string>
    <string name="apply_compensation">Apply Compensation</string>
    <string name="company_holidays">Company Holidays</string>
    <string name="birthdays">Birthdays</string>
    <string name="show_all">Show All</string>
    <string name="leave_today">Leave Today</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="birthday">Birthday</string>
    <string name="days_remaining">Days Remaining</string>
    <string name="department">Department</string>
    <string name="phone">Phone</string>
    <string name="leave_issuer">Leave Issuer</string>
    <string name="hint_startdate">Start Date</string>
    <string name="hint_enddate">End Date</string>
    <string name="hint_duration">Duration</string>
    <string name="hint_tol">Type of leave request</string>
    <string name="hint_leavereason">Leave Reason</string>
    <string name="hint_nod">Number of Days</string>
    <string name="hint_topic">Topic</string>
    <string name="hint_notice">Notice</string>
    <string name="hint_compensation_for">Compensation For</string>
    <string name="hint_verified_email">Verified Email</string>
    <string name="txt_submit">Submit</string>

    <string name="default_notification_channel_id">incwell_lms</string>
    <string name="enter_your_email_address_to_receive_n_your_password_reset_link">Enter your email address to receive
        your\n password reset link
    </string>
    <string name="edit_profile">Change Picture</string>
    <string name="home">Home</string>

    <!--Messages-->
    <string name="no_internet">No Internet Connection!</string>
    <string name="server_down">Something went wrong!</string>
    <string name="email">Email</string>
    <string name="half_day">Half Day</string>
    <string name="full_day">Full Day</string>
    <string name="leave_type">Leave Type</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset">Reset</string>
    <string name="annual_leave">Annual Leave</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="compensation">Compensation</string>
    <string name="notification">Notification</string>
    <string name="notification_bell">notification bell</string>
    <string name="_0">0</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <string name="empty_field">Field is Empty!</string>
    <string name="comment">Comment</string>
    <string name="department1">Department:</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="from">From:</string>
    <string name="technology">Technology</string>
    <string name="to">To:</string>
</resources>
