<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_notification"
          android:title="@string/notification"
          app:showAsAction="always"
          app:actionLayout="@layout/notification_badge"/>

    <item android:id="@+id/action_profile"
          android:icon="@drawable/ic_profile"
          app:showAsAction="always"
          android:title="@string/inc">
        <menu>
            <item android:id="@+id/action_settings"
                  android:title="@string/action_settings"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>
            <item android:id="@+id/action_logout"
                  android:title="@string/action_logout"
                  android:orderInCategory="100"
                  app:showAsAction="never"/>
        </menu>
    </item>
</menu>
