<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
        <item
                android:id="@+id/nav_my_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/my_profile" />
        <item
                android:id="@+id/nav_users"
                android:icon="@drawable/ic_users"
                android:title="@string/users" />
        <item
                android:id="@+id/nav_apply_compensation"
                android:icon="@drawable/ic_add"
                android:title="@string/apply_compensation" />
    </group>

    <item
            android:id="@+id/nav_admin"
            android:title="Admin Features">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/nav_register_user"
                        android:icon="@drawable/ic_register_user"
                        android:title="Register User" />
                <item
                        android:id="@+id/nav_create_notice"
                        android:icon="@drawable/ic_create_notice"
                        android:title="Create Notice" />
            </group>
        </menu>
    </item>

</menu>
