<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewmodel"
                type="com.incwelltechnology.lms.ui.auth.AuthViewModel"/>
    </data>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:padding="@dimen/dimen_8x2"
        android:layout_height="match_parent">


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:orientation="vertical">

        <ImageView android:layout_width="@dimen/welcome_banner_size"
                   android:layout_height="@dimen/welcome_banner_size"
                   android:layout_gravity="center"
                   android:layout_alignParentTop="true"
                   android:src="@drawable/ic_welcome"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8x4"
                android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8x1"
                android:layout_gravity="center"
                app:cornerRadius="@dimen/dimen_5x4"
                android:padding="@dimen/dimen_8x1"
                android:text="@string/txt_login"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_8x1"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:text="@string/txt_forgot_password"/>
    </LinearLayout>
</RelativeLayout>
</layout>
