<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.reset.ResetActivity">
    <data>
        <variable
                name="resetViewmodel"
                type="com.incwelltechnology.lms.ui.reset.ResetViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/mtrl_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.076"
                app:srcCompat="@drawable/ic_arrow_back"
                android:backgroundTint="@color/colorAccent"
                android:layout_marginBottom="8dp"
                app:tint="@null"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"/>
        <ImageView
                android:layout_width="258dp"
                android:layout_height="228dp"
                app:srcCompat="@drawable/ic_user_guess"
                android:id="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.504"
                android:layout_marginTop="60dp" app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/inc"/>
        <TextView
                android:text="@string/txt_forgot_password"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:id="@+id/textView4"/>
        <TextView
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/enter_your_email_address_to_receive_n_your_password_reset_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.lms.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginEnd="@dimen/dimen_8x4"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/dimen_8x4"
                app:startIconDrawable="@drawable/ic_email_black_24dp"
                app:startIconTint="@color/colorTextSecondary"
                android:hint="@string/hint_verified_email"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/til_email"
                app:layout_constraintHorizontal_bias="0.0">
            <com.google.android.material.textfield.TextInputEditText
                    android:text="@={resetViewmodel.verifiedEmailAddress}"
                    android:id="@+id/verifiedEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                style="@style/Widget.lms.Button"
                android:text="@string/txt_submit"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/verifyEmailBtn"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/til_email"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintVertical_bias="0.29"/>
        <ProgressBar
                android:visibility="gone"
                android:id="@+id/cpb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
