<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fafafa">

    <ImageView
            android:layout_width="353dp"
            android:layout_height="282dp" app:srcCompat="@drawable/ic_loginimage"
            android:id="@+id/imageView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <ImageView
            android:layout_width="386dp"
            android:layout_height="385dp" app:srcCompat="@drawable/ic_logincard"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.444"
            android:layout_marginTop="220dp" app:layout_constraintTop_toTopOf="@+id/imageView"/>
    <com.google.android.material.button.MaterialButton
            android:text="@string/txt_login"
            style="@style/Widget.lms.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginTop="8dp"
            android:padding="@dimen/dimen_5x2"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3"/>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.lms.TextInputLayout"
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="80dp"
            android:layout_marginStart="@dimen/dimen_8x7"
            android:layout_marginEnd="@dimen/dimen_8x7"
            android:hint="@string/hint_username"
            app:startIconDrawable="@drawable/ic_user"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.lms.TextInputLayout"
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/dimen_8x7"
            android:layout_marginEnd="@dimen/dimen_8x7"
            android:hint="@string/hint_password"
            app:startIconDrawable="@drawable/ic_padlock"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintStart_toStartOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintHorizontal_bias="0.52">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
            android:id="@+id/textView"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/editText2"
            app:layout_constraintStart_toStartOf="@+id/editText2"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.819"
            app:layout_constraintVertical_bias="0.179"/>
</androidx.constraintlayout.widget.ConstraintLayout>